# arctic-sniffer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md
.github/workflows/: build.yml  create-release.yml
docs/: TUYA-ARCTIC-PROTOCOL.md  openapi.yaml
main/: CMakeLists.txt  Kconfig.projbuild  api_server.cpp  api_server.h  arctic_registers.cpp  arctic_registers.h  display.cpp  display.h  dns_server.cpp  dns_server.h  idf_component.yml  main.cpp  modbus_sniffer.cpp  modbus_sniffer.h  ota_manager.cpp  ota_manager.h  recorder.cpp  recorder.h  tuya_codec.cpp  tuya_codec.h  wifi_manager.cpp  wifi_manager.h
main/web/: gzip_html.py  index.html  portal.html
tests/: CMakeLists.txt  README.md  test_tuya_codec.cpp
